--- a/src/main/resources/templates/fragments/fragment-general.html
+++ b/src/main/resources/templates/fragments/fragment-general.html
@@ -2,24 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org" 
 	 xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:fragment="head(links, scripts)">
-<meta charset="UTF-8" />
-<title th:text="#{text.empresa.nombre}"></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
+    <title th:text="#{text.empresa.nombre}"></title>
 
-<!-- Common styles and scripts -->
+    <!-- Common styles and scripts -->
+    <link rel="icon" type="image/png" th:href="@{/favicon.ico}"/>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet"
+        type="text/css" />
 
-<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
-<link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet"
-	type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
-	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />	
+    <!--/* Block para links adicionales */-->
+    <th:block th:replace="${links}" />
 
-<!--/* Block para links adicionales */-->
-<th:block th:replace="${links}" />
-
-<!--/* Block para scripts adicionales */-->
-<th:block th:replace="${scripts}" />
+    <!--/* Block para scripts adicionales */-->
+    <th:block th:replace="${scripts}" />
 </head>
 <body>
 
@@ -35,8 +37,12 @@
 			</button>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
-					<li class="ml-3 nav-item"><a class="nav-link" href="#" th:href="@{/repartos/list}">Deliveries</a></li>
-					<li class="ml-3 nav-item"><a class="nav-link" href="#" th:href="@{/customers/list}">Customer</a></li>
+					<li class="ml-3 nav-item">
+                        <a class="nav-link" href="#" th:href="@{/repartos/list}">Deliveries</a>
+                    </li>
+					<li class="ml-3 nav-item">
+                        <a class="nav-link" href="#" th:href="@{/customers/list}">Customers</a>
+                    </li>
 				</ul>
 				<ul class="navbar-nav mr-xl-5">
 					<li sec:authorize="!isAuthenticated()"><a class="btn btn-outline-warning"
@@ -77,23 +83,16 @@
 		</p>
 	
 		<hr />
-		<script charset="UTF8" src="https://code.jquery.com/jquery-3.2.1.min.js"
-			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-		<script charset="UTF8"
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-			crossorigin="anonymous"></script>
-		<script charset="UTF8" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-			crossorigin="anonymous"></script>
-		<script charset="UTF8" th:src="@{/js/custom-functions.js}"></script>
+        <script charset="UTF8" th:src="@{/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
+        <script charset="UTF8" th:src="@{/js/popper.min.js}" type="text/javascript"></script>
+        <script charset="UTF8" th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 
 	</footer>
     <div th:fragment="google_maps(scripts)">
-        <script src="https://maps.googleapis.com/maps/api/"
+        <script src="https://maps.googleapis.com/maps/api/js?"
                 type="text/javascript"></script>
-        <script th:src="@{/js/map-font-icons.js}" type="text/javascript"></script>
-        <script th:src="@{/js/mapa.js}" type="text/javascript"></script>
+        <script charset="UTF8" th:src="@{/js/map-font-icons.js}" type="text/javascript"></script>
+        <script charset="UTF8" th:src="@{/js/mapa.js}" type="text/javascript"></script>
     </div>
 </body>
 </html>
