--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -239,3 +239,22 @@ body {
 a:hover, a:hover span{
     color: #28a745;
 }
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.42857;
+}
+
+.btn-circle.btn-xl {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
