--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,9 +19,11 @@
     <div class="login-form">
         <div class="main-div col-md-6 col-xl-4">
             <div class="panel">
-                <button id="infopop" type="button" class="btn btn-info btn-circle btn-xl float-right" data-toggle="infopop" title="Repository"
-                        data-content="You can check the code <a href='https://github.com/pburgov/spring-delivery' target='blank' title='Go To GitHub'>here</a>">
-                    <i  class=" fa fa-info"></i></button>
+                <button id="infopop" type="button" class="btn btn-info btn-circle btn-xl float-right" data-toggle="infopop"
+                        data-trigger="focus" title="Repository"
+                        data-content="You can check the code <a href='https://github.com/pburgov/spring-delivery' target='_blank' title='Go To GitHub'>here</a>">
+                    <i  class=" fa fa-info"></i>
+                </button>
                 <p>
                     <img alt="Logo" th:src="@{/images/spring_icon.png}"/>
                 </p>
